--- a/week2/assignment/Assignment+2 (1).ipynb
+++ b/week2/assignment/Assignment+2 (1).ipynb
@@ -25,9 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": false,
     "nbgrader": {
      "grade": false,
      "grade_id": "1",
@@ -40,6 +39,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -185,7 +197,7 @@
        "Australasia              12  ANZ  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,10 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -254,7 +264,7 @@
        "Name: Afghanistan, dtype: object"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,9 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": false,
     "nbgrader": {
      "grade": false,
      "locked": false,
@@ -300,7 +309,7 @@
        "'United States'"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,10 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -335,7 +342,7 @@
        "'United States'"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,39 +372,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.5/site-packages/ipykernel/__main__.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'Bulgaria'"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def answer_three():\n",
-    "    dfones = df[(df['Gold'] > 0) & (df['Gold.1'] > 0)]\n",
+    "    df.loc[:,'Diffs'] = (df.loc[:,'Gold'] - df.loc[:,'Gold.1'])/df.loc[:,'Gold.2']\n",
+    "    dfgolds = df[(df['Gold'] > 0) & (df['Gold.1'] > 0)]\n",
     "   \n",
-    "    dfones['Diffs'] = (dfones['Gold'] - dfones['Gold.1'])/dfones['Gold.2']\n",
-    "    return dfones['Diffs'].idxmax()\n",
+    "    return dfgolds.loc[:,'Diffs'].idxmax()\n",
+    "\n",
     "          \n",
     "answer_three()"
    ]
@@ -414,10 +409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -483,10 +476,10 @@
        "Zambia                                 3\n",
        "Zimbabwe                              18\n",
        "Mixed team                            38\n",
-       "Name: Points, dtype: int64"
+       "Name: Points, Length: 146, dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,15 +510,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -718,7 +722,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,10 +734,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -741,7 +743,7 @@
        "'Texas'"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,10 +769,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -778,7 +778,7 @@
        "['California', 'Texas', 'Illinois']"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,10 +809,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -820,7 +818,7 @@
        "'Harris County'"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,15 +857,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -915,7 +924,7 @@
        "3163     Wisconsin  Washington County"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,15 +940,6 @@
     "\n",
     "answer_eight()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -965,9 +965,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
